crates/loxia-tui/src/modals/snapshots/loxia_tui__modals__sleep_timer__tests__sleep_timer_snapshot_armed.snap
---
source: crates/loxia-tui/src/modals/sleep_timer.rs
assertion_line: 440
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 90, height: 20 },
    content: [
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "      ┌SLEEP TIMER — end of current track──────────────────────────────────────────┐      ",
        "      │Stop playback after:                                                        │      ",
        "      │  ( ) 15 Minutes     ( ) 30 Minutes     ( ) 60 Minutes                      │      ",
        "      │▶ (•) End of Current Track (0:00)                                           │      ",
        "      │  ( ) End of Active Queue (6 tracks remaining)                              │      ",
        "      │                                                                            │      ",
        "      │Options:                                                                    │      ",
        "      │  [ ] Fade out audio smoothly over the last 10 seconds                      │      ",
        "      │  [X] Close loxia when finished                                             │      ",
        "      │                                                                            │      ",
        "      │[ Enter ] Start    [ d ] Disarm    [ Esc ] Cancel                           │      ",
        "      │                                                                            │      ",
        "      └────────────────────────────────────────────────────────────────────────────┘      ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 3, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 6, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 40, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 6, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 7, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 7, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 8, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 8, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 9, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 9, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 9, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 10, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 10, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 11, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 11, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 12, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 12, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 13, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 13, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 13, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 14, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 14, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 15, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
